# elf-parser

./: CMakeLists.txt  LICENSE.txt  README.md  main.c
.circleci/: config.yml
include/: elf_parser.h  elf_parser_private.h  ftrace_private.h  ptrace_util.h  s_list.h  tui.h
src/: elf_parser.c  main.c  ptrace.c  ptrace_util.c  s_list.c  tui.c
