CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(ftrace)

SET(PROJECT_VERSION_MAJOR 0)
SET(PROJECT_VERSION_MINOR 1)
SET(CMAKE_BUILD_TYPE Debug)
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Winline -Werror -g -fPIE")

SET(OUTPUT_ELF
	"${CMAKE_PROJECT_NAME}-${PROJECT_VERSION_MAJOR}-${PROJECT_VERSION_MINOR}"
)

SET(SRC
	./src/main.c
	./src/elf_parser.c
)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)

ADD_EXECUTABLE(${OUTPUT_ELF} ${SRC})
