CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(elfparser)

SET(PROJECT_VERSION_MAJOR 0)
SET(PROJECT_VERSION_MINOR 1)
SET(CMAKE_BUILD_TYPE Debug)
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Werror -Winline -g -fPIE")

SET(OUTPUT_ELF
	"${CMAKE_PROJECT_NAME}-${PROJECT_VERSION_MAJOR}-${PROJECT_VERSION_MINOR}"
)

SET(SRC
	./src/main.c
	./src/elf_parser.c
	./src/tui.c
)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)

find_package(Curses REQUIRED)
include_directories(${CURSES_INCLUDE_DIR})

ADD_EXECUTABLE(${OUTPUT_ELF} ${SRC})
TARGET_LINK_LIBRARIES(${OUTPUT_ELF} ${CURSES_LIBRARIES})
